--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-prettier-eslint-action",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/styles": "^4.10.0",
@@ -10,10 +11,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "history": "^5.0.0",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-material-ui-form-validator": "^2.0.10",
