--- a/package.json
+++ b/package.json
@@ -1,73 +1,84 @@
 {
-	"name": "react-prettier-eslint-action",
-	"version": "0.1.0",
-	"private": true,
-	"proxy": "http://localhost:5000",
-	"dependencies": {
-		"@material-ui/core": "^4.10.2",
-		"@material-ui/styles": "^4.10.0",
-		"@material-ui/system": "^4.9.14",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"axios": "^0.19.2",
-		"emailjs-com": "^2.4.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"express-favicon": "^2.0.1",
-		"history": "^5.0.0",
-		"path": "^0.12.7",
-		"prop-types": "^15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-material-ui-form-validator": "^2.0.10",
-		"react-redux": "^7.2.0",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1",
-		"react-select": "^3.1.0",
-		"react-slick": "^0.26.1",
-		"redux": "^4.0.5",
-		"redux-thunk": "^2.3.0",
-		"slick-carousel": "^1.8.1"
-	},
-	"engines": {
-		"node": "12.x",
-		"npm": "6.x"
-	},
-	"scripts": {
-		"start": "node server.js",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"heroku-postbuild": "npm run build"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
-		"development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
-	},
-	"devDependencies": {
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.1.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-import": "^2.20.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.3",
-		"eslint-plugin-react": "^7.19.0",
-		"eslint-plugin-react-hooks": "^2.5.1",
-		"husky": "^4.2.5",
-		"lint-staged": "^10.2.2",
-		"prettier": "^2.0.5",
-		"pretty-quick": "^2.0.1"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"src/**/*.{js,jsx}": ["./node_modules/.bin/eslint --max-warnings=0", "pretty-quick --staged"]
-	}
+  "name": "react-prettier-eslint-action",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://back-givyoo.givyoo.fr:3000",
+  "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/styles": "^4.10.0",
+    "@material-ui/system": "^4.9.14",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "history": "^5.0.0",
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-material-ui-form-validator": "^2.0.10",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
+    "react-slick": "^0.26.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "./node_modules/.bin/eslint --max-warnings=0",
+      "pretty-quick --staged"
+    ]
+  }
 }
